fix mobile layout bug

--- a/src/components/PaperSheet/PaperSheet.css
+++ b/src/components/PaperSheet/PaperSheet.css
@@ -110,7 +110,7 @@
     height: 100%;
     font-weight: 400;
     width: 100%;
-    max-width: 380px;
+    max-width: 325px;
     /* Paper box shadow */
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
                 0 1px 5px 0 rgba(0,0,0,0.12),
